add js for height

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -10,6 +10,8 @@ function set_genespace(drid,value){
     document.getElementById(drid).value = value;
 }
 
+function setheight(){ document.getElementById('gobe').style.height = '360px'; }
+
 $(document).ready(function(){
  //prefetch button images
 // if (document.images) {
