--- a/web/tmpl/FastaView.tmpl
+++ b/web/tmpl/FastaView.tmpl
@@ -54,6 +54,7 @@ $(document).ready(function()
    <td><input type=button id="dna_button" value="DNA Sequence" onclick="update_seqs(0)">
    <td><input type=button id="prot_text_button" value="Plain Text" onclick="update_seqs(1,1)">
    <td><input type=button id="dna_text_button" value="Plain Text" onclick="update_seqs(0,1)">
+   <td><input type=button id="blast_button" value="CoGe Blast" onclick="window.open('CoGeBlast.pl?featid='+$('#fids').val())">
 
    </TR>
   </TABLE>
