--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -16,7 +16,7 @@ $(document).ready(function(){
   //Object Generation
   var seqview = <TMPL_VAR NAME=SEQVIEW> || 0;
   if(seqview !=0){
-    var featid = <TMPL_VAR NAME=FEATID>;
+    var featid = "<TMPL_VAR NAME=FEATID>";
     if ((featid) && (featid!=0)){
       seqObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=UPSTREAM>,<TMPL_VAR NAME=DOWNSTREAM>,seqview,'<TMPL_VAR NAME=CHR>',<TMPL_VAR NAME=RC>,featid);
     }
@@ -603,13 +603,23 @@ function get_seq(which_type) {
  dsid = seqObj.dsid;
  featid = seqObj.featid;
  chr = seqObj.chr;
-// radio2 = kaj.GS('ncbi_radio');
-// alert('ncbi_radio');
  if (featid) {
-   get_sequence(['args__'+featid,'args__'+dsid,which_type, 'args__'+seqObj.seqview, 'args__'+seqObj.upstream,'args__'+seqObj.downstream,'args__'+seqObj.rc],['seq_box']);
+   get_sequence([
+	'args__fid','args__'+featid,
+	'args__blast_type', which_type, 
+	'args__upstream', 'args__'+seqObj.upstream,
+	'args__downstream', 'args__'+seqObj.downstream,
+	'args__rc','args__'+seqObj.rc
+	],['seq_box']);
  }
  else if (chr) {
-   get_sequence(['args__'+chr,'args__'+dsid,which_type, 'args__'+seqObj.seqview, 'args__'+seqObj.upstream,'args__'+seqObj.downstream],['seq_box']);
+   get_sequence([
+	'args__chr','args__'+chr,
+   	'args__dsid','args__'+dsid,
+	'args__blast_type', which_type, 
+	'args__start', 'args__'+seqObj.upstream,
+	'args__stop', 'args__'+seqObj.downstream
+	],['seq_box']);
  }
  else {
 // alert('Im being called!'+accn+dsid+type_name);
