--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -14,6 +14,8 @@ $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300
   var featid = <TMPL_VAR NAME=FEATID>;
   if (featid){
   myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>',featid,'<TMPL_VAR NAME=FEATNAME>');}
+  
+//  myObj = new generate_seq_obj(featid,'<TMPL_VAR NAME=FEATNAME>');}
   else{
   myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>');}
   get_sequence();
