--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -12,7 +12,10 @@ function feature_checkboxes(){
     feats_parse(['args__'+accn],[export_url]);
   }
   else if (action == "fasta"){
-    export_fasta_file(['args__'+accn,'args__'+pageObj.basename],[export_url]);
+    export_fasta_file(['args__'+accn],[export_url]);
+  }
+  else if (action == "xls"){
+    generate_excel_file(['args__'+accn],[export_url]);
   }
   else {
     alert("We will get this working ... soon.");
@@ -118,6 +121,7 @@ jQuery.fn.unCheckCheckboxes = function()
  			<select name=checked_action id=checked_action>
                  <option value = "gevo">Send to GEvo</option>
            		 <option value = "fasta">Create FASTA File</option>
+           		 <option value = "xls">Export to Excel</option>
           </selected>  
           <input type=button value="Go" onClick="feature_checkboxes()">    
   </div>
