--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -12,7 +12,7 @@ $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300
     myObj = new generate_seq_obj_with_featid(featid,'<TMPL_VAR NAME=FEATNAME>');}
   else{
     myObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,'<TMPL_VAR NAME=CHR>');}
-  get_sequence();
+  get_sequence(<TMPL_VAR NAME=RC>);
 });
 
 
