--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -531,8 +531,8 @@ function get_seq(seq_num)
   <TD>Filter query sequence (DUST/SEG) (-F): </TD>
   <TD>
     <select class="backbox" name="blast_filter" id="blast_filter" tabindex="1" >
-     <option value="T" selected>Yes</option>
-     <option value="F">No</option>
+     <option value="T" >Yes</option>
+     <option value="F" selected>No</option>
     </select>
   </TD>
  </TR>    
