--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -117,6 +117,12 @@ login(['uname', 'pwd','url'],[place_cookie]);
 <input type="submit" value="Use Public Login" id="Login" onClick="login(['args__public', 'args__none','url'],[place_cookie])">
 <input type="checkbox" id="disable_animations" value=1><font class=small>Check to Disable CoGe Animations (Recommended for Older Computers)</font><br>
 <div class=small>Use "public login" if you don't have a registered CoGe account.</div>
+<br>
+<br>
+
+<div style="width: 600px"><div align=center><img src="/CoGe/picts/gevo-synteny.png" width=500px></div><div align = center class="small species">GEvo analysis of syntenic regions of Arabidopsis derived from its most recent genome duplication event.</div>Welcome to CoGe.  CoGe is a comparative genomics platform designed to allow easy access to genomic data from any organism and provide analysis tools for finding homologous sequences and comparing multiple genomic regions.  There are several ways to access data using CoGe and when you login, you will be presented with a carousel displaying or list of CoGe's tools.  If you are new to CoGe, we recommending reading <a href="/CoGe/docs/help/CoGe_Maize/Maize_Comparative_Genomics.html"> this tutorial</a> for an example of how to use CoGe.  Also, check out the help pages which can be found in the "help" section of the menu bar at the top left of your screen.
+</div>
+
 </TMPL_IF>
 
 <TMPL_IF NAME=ANIMATE>
