--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -3,10 +3,7 @@
 <SCRIPT language="JavaScript">
 
 $(document).ready(function(){
-//$('#hide_annotation_button').hide();
-//$('#dna_button').hide(0);
 $('#maketable').html('<div id ="annotation" style = "overflow: auto; height: 300px; width: auto;"></DIV>');
-//$('#feat_annos').toggle(0);
   var featid = <TMPL_VAR NAME=FEATID>;
   if (featid){
     myObj = new generate_seq_obj_with_featid(featid,'<TMPL_VAR NAME=FEATNAME>');}
@@ -107,22 +104,6 @@ function waiting(tag,rc) {
 }
 
 */
-
-function get_feats(){
-$('#feat_annos').toggle(0);
-$('#hide_annotation_button').toggle(0);
-$('#annotation_button').toggle(0);
-var hidden = $('#feat_annos').is(':hidden');
-if (hidden == true){
- return;}
-//waiting('annotation');
-}
-
-//obsolete, no longer needed; used for copy+paste problem before using text area
-// function make_focus() {
-//   document.nt_stream.upstream.focus();
-// }
-
 function redefine(){
   if(! isNaN($('#addup').val())) {
   var up = $('#upstream').val()*1-$('#addup').val()*1;
@@ -183,8 +164,7 @@ function get_sequence(rc,pro,add){
       <!--get_seq(['args__featid', 'args__<TMPL_VAR NAME=FEATID>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>', 'args__rc', 'args__<TMPL_VAR NAME=RC>', 'args__chr', 'args__<TMPL_VAR NAME=CHR>', 'args__dsid', 'args__<TMPL_VAR NAME=DSID>', 'args__featname', 'args__<TMPL_VAR NAME=FEATNAME>', 'args__upstream', 'upstream', 'args__downstream', 'downstream', 'args__start', 'args__<TMPL_VAR NAME=START>','args__stop', 'args__<TMPL_VAR NAME=STOP>', 'args__strand', 'args__<TMPL_VAR NAME=STRAND>', 'args__add', 'args__<TMPL_VAR NAME=ADD>'],[get_sequence]);gen_title(['args__rc', 'args__<TMPL_VAR NAME=TITLE_RC>', 'args__pro', 'args__<TMPL_VAR NAME=PRO>'],['box_name']);-->
      <TMPL_IF NAME=FIND_FEATS>
      <TD align=right valign="top">
-     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="get_feats();find_feats(['args__start', 'upstream', 'args__stop', 'downstream', 'args__chr', 'args__'+myObj.chr, 'args__dsid', 'args__'+myObj.dsid],['annotation']);"></DIV>
-     <DIV id="hide_annotation_button" style="display: none"> <input type=button value="Hide Features" onClick="get_feats();"></DIV>
+     <DIV id="annotation_button"> <input type=button value="Find Features in Sequence" onClick="window.open('<TMPL_VAR NAME=FEATLISTLINK>')"></DIV>
      </TMPL_IF>
      </TD>
      <TD align=right valign="top">
