removed chromosome and strand columns and combined with location column

--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -92,10 +92,8 @@ jQuery.fn.unCheckCheckboxes = function()
    <TH> </TH>
    <TH>Feature Name</TH>
    <TH>Type</TH>
-   <th>Chr</th>
    <TH>Location</TH>
    <TH>Length</TH>
-   <th>Strand</th>
    <th>Organism(version)</th>
    <th>Annotation</th>
    <th>Other Information</th>
@@ -106,10 +104,10 @@ jQuery.fn.unCheckCheckboxes = function()
       <TD><input type=checkbox id='<TMPL_VAR NAME=FEATID>'></TD>
       <TD><TMPL_VAR NAME=NAME></TD>
       <TD><TMPL_VAR NAME=TYPE></TD>
-      <TD><TMPL_VAR NAME=CHR></TD>
+<!--      <TD><TMPL_VAR NAME=CHR></TD>-->
       <TD><TMPL_VAR NAME=LOC></TD>
       <TD><TMPL_VAR NAME=LENGTH></TD>
-      <TD><TMPL_VAR NAME=STRAND></TD>
+<!--      <TD><TMPL_VAR NAME=STRAND></TD>-->
       <TD><TMPL_VAR NAME=ORG></TD>
       <TD nowrap><TMPL_VAR NAME=HPP></TD>
       <TD nowrap><TMPL_VAR NAME=OTHER></TD>
