added warning about ajax and browser back button

--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -3,5 +3,6 @@
 <DIV>
 <font class = "small">Currently logged in as: <TMPL_VAR NAME=USER> </font><font class="xsmall"><TMPL_VAR NAME=DATE> <a href=index.pl?logout=1>Log Out</a></font>
 </DIV>
+<font class = "small"><span style="color: red;">Warning:</span>  This site uses <a href="http://en.wikipedia.org/wiki/Ajax_(programming)">AJAX</a>.  Don't press your browsers back button!</font>
 </BODY>
 </HTML>
