removed consol debug message

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -10,7 +10,7 @@
 /* so up is the 'left', down is the 'right' bar.   */
 
 function set_genespace(updown, idx, value, length, anchorlength){
-    console.log(updown+" "+value+" "+length+" "+anchorlength);
+//    console.log(updown+" "+value+" "+length+" "+anchorlength);
     value = parseFloat(value);
     var eid = 'dr' + updown + idx;
     document.getElementById(eid).value = value;
